Not Supportted device settings

--- a/src/Not-Supported.html
+++ b/src/Not-Supported.html
@@ -5,11 +5,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Not-Supported decive</title>
+  <style>
+    .w-full {
+      box-sizing: border-box;
+      background-color: #7e7e96;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    .text {
+      font-size: 25px;
+      padding-top: 10vh;
+      padding-left: 20vw;
+      padding-right: 20vw;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
-
+  <div class="w-full">
+    <div class="text">
+      Ihr Gerät scheint weniger als 1024 Pixel breite zu haben. Bitte kommen sie mit einem anderen Gerät nochmal.
+    </div>
+    <div class="text">
+      <img src="./assets/pepe.gif" alt="">
+    </div>
+  </div>
 </body>
 
 </html>
