--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./NOTLOOK.css">
   <link rel="icon" href="./assets/pepe.gif">
   <script src="./script.js"></script>
+  <script src="./NOTLOOK.js"></script>
   <title>CsS gRiD</title>
 </head>
 
