--- a/src/index-content.html
+++ b/src/index-content.html
@@ -15,6 +15,7 @@
 <body>
   <div style="margin-left: 1vw;">
     <header class="header">
+      <div class="big">Spring direkt zu: </div>
       <a onclick="scroll2('css')">CSS-Classes</a>
       <a onclick="scroll2('grid')">Layout / Grid</a>
       <a onclick="scroll2('js'); alert('In der Console (F12)')">JavaScript</a>
